--- a/ZippyZpl/View/LabelView.xaml
+++ b/ZippyZpl/View/LabelView.xaml
@@ -3,39 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:commands="clr-namespace:ZippyZpl.Command"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <!--<UserControl.CommandBindings>
-        <CommandBinding 
-            Command="{x:Static commands:ZippyZpl:ListenCommand}" 
-            CanExecute="ListenCommand_CanExecute"
-            Executed="ListenCommand_Executed" />
-    </UserControl.CommandBindings>-->
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <StackPanel HorizontalAlignment = "Left">
+    <ItemsControl ItemsSource = "{Binding Path = Labels}" Margin="10">
+        <ItemsControl.ItemTemplate>
+            <DataTemplate>
+                <StackPanel>
+                    <Border Background="Black" BorderThickness="5" CornerRadius="8,8,3,3">
+                        <Image Source = "{Binding Path = LabelImage.UriSource}" Stretch="Uniform"/>
+                    </Border>
+                </StackPanel>
+            </DataTemplate>
+        </ItemsControl.ItemTemplate>
 
-            <ItemsControl ItemsSource = "{Binding Path = Labels}">
-
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation = "Horizontal">
-                            <Border Background="Black" BorderThickness="5" CornerRadius="8,8,3,3">
-                                <Image Source = "{Binding Path = LabelImage.UriSource}" Stretch="Uniform"/>
-                            </Border>
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-
-            </ItemsControl>
-
-        </StackPanel>
-    </Grid>
+    </ItemsControl>
 </UserControl>
